--- a/styles/style.css
+++ b/styles/style.css
@@ -215,6 +215,82 @@ header {
     border: 5px;
 }
 
+.banner {
+    width: 1050px;
+    padding: 124px 60px 80px;
+    background-image: linear-gradient(135deg, #21254e,#2b4a83);
+    border-radius: 20px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between; 
+}
+
+.banner-text {
+    font-size: 1.5rem;
+    color: #fff;
+    font-family: YekanBakhHeavy;
+}
+
+.banner-text p {
+    color: #fff;
+    font-size: 1rem;
+    margin: 25px 0;
+    line-height: 2.5rem;
+}
+
+.banner-image {
+    width: 1000px;
+}
+
+.banner-button {
+    margin-top: 60px;
+}
+
+.resgister {
+    font-size: 1rem;
+    font-family: YekanBakhBold;
+    color: black;
+    background-color: #ffd900;
+    padding: 6px 14px;
+    border: none;
+    border-radius: 10px;
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+.login {
+    font-size: 1rem;
+    font-family: YekanBakhBold;
+    color:#fff;
+    background-color: #435aba;
+    padding: 6px 14px;
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
+.go-down {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    bottom: 58px;
+}
+
+.go-down div {
+    background-image: url(../images/arrowbottom.svg);
+    width: 164px;
+    height: 78px;
+}
+
+.go-down img {
+    width: 15px;
+    position: relative;
+    top: -60px;
+}
+
 @keyframes identifier {
     0% {
         opacity: 0;
