--- a/styles/style.css
+++ b/styles/style.css
@@ -226,14 +226,13 @@ header {
 }
 
 .banner-text {
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #fff;
-    font-family: YekanBakhHeavy;
 }
 
 .banner-text p {
     color: #fff;
-    font-size: 1rem;
+    font-size: 1.15rem;
     margin: 25px 0;
     line-height: 2.5rem;
 }
@@ -306,6 +305,13 @@ header {
     header {
          width: 940px;    
     }
+    .banner {
+        width: 900px;
+        padding: 60px 40px 120px;
+    }
+    .banner-image img {
+        width: 430px;
+    }
 }
 
 @media (max-width: 990px) {
@@ -323,6 +329,29 @@ header {
     .header-ul li {
         margin: 0 10px;
     }
+
+    .banner {
+        width: auto;
+        padding: 40px 40px 85px;
+        margin-left: 35px;
+        margin-right: 35px;
+        
+    }
+    .banner-image img {
+        display: none;
+    }
+    .banner-text {
+        text-align: center;  
+    }
+
+    .banner-text p {
+        margin: 5px 0;
+        font-size: 1rem;
+    }
+
+    .banner-button {
+        margin-top: 40px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -334,6 +363,24 @@ header {
     }
     header {
         width: auto;
-        padding: 10px 8px
+        padding: 10px 8px;
+    }
+    .banner {
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+   
+}
+@media (max-width: 575px) {
+    .banner {
+        padding: 80px 40px;
+    }
+    .banner-text h3 {
+        font-size: 1.2rem;
+        text-align: right;
+    }
+    .banner-text p {
+        text-align: justify;
     }
 }
+
