card's style added

--- a/styles/style.css
+++ b/styles/style.css
@@ -299,6 +299,83 @@ header {
     }
 }
 
+
+.online-payment {
+    width: 1170px;
+    margin: auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.online-payment img {
+    width: 450px;
+    height: 480px;
+}
+
+.section-text {
+    margin: 30px 0;
+    width: 530px;
+}
+
+.section-text h2 {
+    color:#747480;
+    font-weight: 500;
+    font-size: 1.4rem;
+    margin: 20px 0 5px;
+}
+
+.section-text h3 {
+    color: #303030;
+    font-weight: 600;
+    font-size: 2rem;
+    margin: 5px 0 10px;
+}
+
+.section-text p {
+    color: #303030;
+    text-align: justify;
+    line-height: 40px;
+    border-bottom: 1px solid #dfe1e4 ;
+    padding-bottom: 20px;
+    margin-top: 16px;
+
+}
+
+.section-links {
+    margin-top: 40px;
+    display: flex;
+}
+
+.section-links .first-button {
+    font-size: 0.9rem;
+    color: black;
+    background-color: #ffd900;
+    padding: 6px 14px;
+    border: none;
+    border-radius: 10px;
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+.section-links .second-button {
+    font-size: 0.9rem;
+    color: #28457b;
+    background-color: rgba(232, 2393, 254, 0.7);
+    padding: 6px 14px;
+    border-radius: 10px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.section-links .second-button img {
+    width: 18px;
+    height:15px;
+    margin-right: 5px;
+}
+
+
 /* responsive */
 
 @media (max-width: 1200px) {
@@ -312,7 +389,11 @@ header {
     .banner-image img {
         width: 430px;
     }
+    .online-payment {
+        width: 940px;
+    }
 }
+
 
 @media (max-width: 990px) {
     header {
@@ -352,6 +433,15 @@ header {
     .banner-button {
         margin-top: 40px;
     }
+
+    .online-payment {
+        width: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+    .section-text {
+        width: 95%;
+    }
 }
 
 @media (max-width: 768px) {
@@ -369,8 +459,17 @@ header {
         margin-left: 8px;
         margin-right: 8px;
     }
-   
+    .section-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .online-payment img {
+        width: 460px;
+        height: 480px;
+    }
 }
+
 @media (max-width: 575px) {
     .banner {
         padding: 80px 40px;
@@ -382,5 +481,17 @@ header {
     .banner-text p {
         text-align: justify;
     }
+    .online-payment .section-image {
+        display: none;
+    }
+    .section-text {
+        width: 80%;
+        padding: 0 10px;
+    }
+
+    .section-text h3 {
+        font-size: 1.5rem;
+    }
+
 }
 
