support styles added

--- a/styles/style.css
+++ b/styles/style.css
@@ -483,6 +483,38 @@ header {
     margin-top: 15px;
 }
 
+.support {
+    width: 1110px;
+    height: 70px;
+    padding: 0 30px;
+    margin: 50px auto;
+    background: #fbf6f1;
+    border-radius: 35px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.support-number {
+    font-size: 1.5rem;
+}
+
+.line {
+    margin: 0 15px;
+}
+
+.phone-number {
+    color: #21254e;
+}
+
+.support-request {
+    display: flex;
+    color: #21254e;
+    font-size: 1.5rem;
+}
+.support-request img {
+    width: 20px;
+    margin-right: 10px;
+}
 
 
 
@@ -529,6 +561,10 @@ header {
 
     .start-box {
         width: 940px;
+    }
+
+    .support {
+        width: 880px;
     }
 }
 
@@ -588,6 +624,13 @@ header {
         margin: 0 38px;
         width: calc(100% - 76px);
     }
+
+    .support {
+        width: calc(100% - 120px);
+    }
+    .support-number .support-request {
+        font-size: 1.2rem;
+    }
 }
 
 @media (max-width: 768px) {
@@ -629,6 +672,18 @@ header {
     margin: 0 8px;
     width: calc(100% - 16px);
    }
+
+   .support {
+     flex-direction: column;
+     align-items: flex-start;
+     background: none;
+   }
+   .support-request {
+    background: #fbf6f1;
+    padding: 5px 20px;
+    border-radius: 35px;
+    margin-top: 20px;
+   }
 }
 
 @media (max-width: 575px) {
@@ -668,6 +723,16 @@ header {
     }
     .start-box p {
         font-size: 1rem;
+    }
+
+    .support {
+        width: calc(100% - 60px);
+        padding: 0;
+        margin: 50px 30px;
+    }
+
+    .support-number .support-request {
+        font-size: 0.95rem;
     }
 
 }
