bell icone added

--- a/styles/style.css
+++ b/styles/style.css
@@ -578,6 +578,19 @@ footer .footer-links {
     padding: 8px 0;
 }
 
+.bell {
+    background-color: #2e82ff;
+    width: fit-content;
+    padding: 7px 7px 0;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+}
+
+.bell img {
+    width: 40px;
+}
 
 
 /* responsive */
